--- a/.github/workflows/test-e2e-pr.yaml
+++ b/.github/workflows/test-e2e-pr.yaml
@@ -1,22 +1,27 @@
 name: test-e2e-pr
 
-on: 
-  pull_request:
-    branches:
-      - main
+on:
+  issue_comment:
+    types: [created]
 
   workflow_dispatch:
 
 permissions:
   id-token: write
   contents: read
-  
+
 jobs:
   test-e2e:
+    if: startsWith(github.event.comment.body, '/test-e2e') && github.event.issue.pull_request
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+      # - name: Checkout
+      #   uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+      - name: PR checkout
+        run: |
+          git fetch --prune --unshallow
+          git checkout ${{ github.event.issue.pull_request.head.ref }}
+          git reset --hard ${{ github.event.issue.pull_request.head.sha }}
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd # v3
