--- a/.github/workflows/test-e2e-pr.yaml
+++ b/.github/workflows/test-e2e-pr.yaml
@@ -51,3 +51,19 @@ jobs:
             --client-id ${{ secrets.AZURE_CLIENT_ID }} \
             --federated-credential-provider "github" \
             --tenant-id ${{ secrets.AZURE_TENANT_ID }}
+
+      - name: Test
+        run: |
+          azd up --no-prompt
+        env:
+          AZURE_ENV_NAME: test
+          AZURE_LOCATION: swedencentral
+          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Clean up
+        run: |
+          azd down --force
+        env:
+          AZURE_ENV_NAME: test
+          AZURE_LOCATION: swedencentral
+          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
