--- a/.github/workflows/test-e2e-pr.yaml
+++ b/.github/workflows/test-e2e-pr.yaml
@@ -65,11 +65,12 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            const runUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`;
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `🚀 @${context.actor} Starting E2E tests...`
+              body: `🚀 @${context.actor} Starting E2E tests...\n\n📊 [View workflow run](${runUrl})`
             });
 
       - name: Checkout
