--- a/.github/workflows/test-e2e-pr.yaml
+++ b/.github/workflows/test-e2e-pr.yaml
@@ -61,16 +61,20 @@ jobs:
       #         content: 'rocket'
       #       });
 
-      - name: Add status comment
+      - name: Add status comment - Starting
         uses: actions/github-script@v7
         with:
           script: |
-            const runUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`;
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `🚀 @${context.actor} Starting E2E tests...\n\n📊 [View workflow run](${runUrl})`
+              body: `🚀 @${context.actor} Starting E2E tests...
+              
+              **Workflow Run:** [${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
+              **Commit:** ${{ github.event.pull_request.head.sha || github.sha }}
+              **Environment:** ${{ vars.AZURE_ENV_NAME }}
+              **Location:** ${{ vars.AZURE_LOCATION }}`
             });
 
       - name: Checkout
@@ -115,15 +119,59 @@ jobs:
           printenv
           azd up --no-prompt
         env:
-          AZURE_ENV_NAME: test
-          AZURE_LOCATION: swedencentral
+          AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
+          AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
           AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Clean up
+        if: always()
         run: |
           printenv
           azd down --force
         env:
-          AZURE_ENV_NAME: test
-          AZURE_LOCATION: swedencentral
+          AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
+          AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
           AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Add status comment - Success
+        if: success()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const startTime = new Date('${{ github.event.comment.created_at }}');
+            const endTime = new Date();
+            const duration = Math.round((endTime - startTime) / 1000 / 60); // minutes
+
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `✅ @${context.actor} E2E tests completed successfully!
+              
+              **Workflow Run:** [${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
+              **Duration:** ~${duration} minutes
+              **Status:** Passed
+              **Environment:** ${{ vars.AZURE_ENV_NAME }}
+              **Location:** ${{ vars.AZURE_LOCATION }}
+              
+              All tests passed and resources have been cleaned up.`
+            });
+
+      - name: Add status comment - Failure
+        if: failure()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `❌ @${context.actor} E2E tests failed!
+              
+              **Workflow Run:** [${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
+              **Status:** Failed
+              **Environment:** ${{ vars.AZURE_ENV_NAME }}
+              **Location:** ${{ vars.AZURE_LOCATION }}
+              
+              Please check the workflow logs for details and try again.`
+            });
